# ray_tracing

./: Cargo.toml  Makefile  README.md  TODO.md  scenes.yaml
scenes/: default.yaml  fog_test.yaml
src/: aabb.rs  bvh.rs  camera.rs  image.rs  lib.rs  main.rs  ray.rs  scene.rs  types.rs  vec3.rs  vec3_glam.rs
src/material/: dielectric.rs  lambertian.rs  metal.rs  mod.rs
src/object/: list.rs  mod.rs  sphere.rs
src/volumetric/: fog.rs  mod.rs
