[package]
name = "ray_tracing"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "ray_tracing"
path = "src/main.rs"

[dependencies]
indicatif = "0.17.11"
rand = "0.8.5"
rayon = "1.10.0"
glam = { version = "0.25", features = ["fast-math"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
